# Financial-Events-clustering-news-tweets

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/for_models/: clean_news_week_AI.csv  clean_news_week_SVB.csv  final_event_signatures.csv  final_event_signatures_AI.csv  tweets_assigned.csv  tweets_assigned_AI.csv
data/for_models/output/: daily_assignment_ratios.csv  table_3_tweet_assignment_AI.csv  table_3_tweet_assignment_SVB.csv  tweets_assigned.csv
data/processed/: sp500_2023.csv  tweets_2023.csv
data/processed/daily_dtm/: dtm_2023-02-01.csv  dtm_2023-02-02.csv  dtm_2023-02-03.csv  dtm_2023-02-04.csv  dtm_2023-02-05.csv  dtm_2023-02-06.csv  dtm_2023-02-07.csv  dtm_2023-02-08.csv  dtm_2023-02-09.csv  dtm_2023-02-10.csv  dtm_2023-02-11.csv  dtm_2023-02-12.csv  dtm_2023-02-13.csv  dtm_2023-02-14.csv  dtm_2023-02-15.csv  dtm_2023-02-16.csv  dtm_2023-02-17.csv  dtm_2023-02-18.csv  dtm_2023-02-19.csv  dtm_2023-02-20.csv  dtm_2023-02-21.csv  dtm_2023-02-22.csv  dtm_2023-02-23.csv  dtm_2023-02-24.csv  (+304 more)
notebooks/: 0_extract_data.ipynb  1_lexicon_generation.ipynb  2_feature_engineering.ipynb  3_news_clustering.ipynb  4_outlier_removal.ipynb  5_relevant_words_extraction.ipynb  6_tweet_assignment.ipynb  7_Alert_generation.ipynb  7_alert_generation.ipynb
outputs/: alerts_best_threshold.csv  comparison_table.csv  evaluation_results.csv
src/: alert_generation.py  extract_data.py  feature_engineering.py  lexicon_generation.py  news_clustering.py  outlier_removal.py  relevant_words_extraction.py  tweet_assignment.py  tweet_preprocessing.py
(+660 files in other folders)
