[project]
name = "projet-roland-maeva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "lxml-html-clean>=0.4.3",
    "nbformat>=5.10.4",
    "newspaper3k>=0.2.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pyclustering>=0.10.1.2",
    "pysentiment2>=0.1.1",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "vadersentiment>=3.3.2",
    "yfinance>=1.1.0",
]
